[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path="src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-http = "3.9.0"
actix-web = "4.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"

[dev-dependencies]
actix-rt = "2.10.0"
reqwest = "0.12.5"
tokio = "1.39.2"


